@@ -12,6 +12,9 @@ Changes:
 
   * '?' is no longer permitted in the user information component of a URI.
     * Use percent-encoding `"%3F"` to include '?' in the user information component.
+  * `MONGOC_URI_AUTHMECHANISMPROPERTIES` now correctly supports `':'` within property values.
+    * Old behavior: `authMechanismProperties=A:B,C:D:E,F:G` is parsed as `{'A': 'B', 'C': 'D:E,F:G'}`.
+    * New behavior: `authMechanismProperties=A:B,C:D:E,F:G` is parsed as `{'A': 'B': 'C': 'D:E', 'F': 'G'}`.
 
 libmongoc 1.30.2
 ================
